--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Parisa Rashidi</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.png">
     <link href="style.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -415,8 +416,117 @@
                 </div>
           </div>
           <div id="Research-Impact-tab" class="tabcontent">
+                <div class="container">
+                    <div>
+                    <h1>Research Impact</h1>
+                    </div>
+                    <hr>
+                    <div>
+                    <h1>Impact of Selected Publications</h1>
+                    </div>
+                    <hr>
+                    <div class="row ">
+                        <div class="col">
+                          <div class="card ">
+                              <h3>2019</h3>
+                              <p>
+                                Shickel, Benjamin, Tyler J. Loftus, Tezcan Ozrazgat-Baslanti, Ashkan Ebadi, Azra Bihorac, and Parisa Rashidi. “DeepSOFA: A Real-Time Continuous Acuity Score Framework using Deep Learning.” Nature Scientific Reports, Vol. 9, No. 1879, 2019.
+
+                                In the top 5% of all research outputs scored by Altmetric. 
+                              </p>
+                          </div>
+                        </div>
+                        <div class="col">
+                            <div class="card ">
+                                <h3>2019</h3>
+                                <p>
+                                  Shickel, Benjamin, Tyler J. Loftus, Tezcan Ozrazgat-Baslanti, Ashkan Ebadi, Azra Bihorac, and Parisa Rashidi. “DeepSOFA: A Real-Time Continuous Acuity Score Framework using Deep Learning.” Nature Scientific Reports, Vol. 9, No. 1879, 2019.
+  
+                                  In the top 5% of all research outputs scored by Altmetric. 
+                                </p>
+                            </div>
+                          </div>
+                        <div class="col">
+                            <div class="card ">
+                                <h3>2019</h3>
+                                <p>
+                                  Shickel, Benjamin, Tyler J. Loftus, Tezcan Ozrazgat-Baslanti, Ashkan Ebadi, Azra Bihorac, and Parisa Rashidi. “DeepSOFA: A Real-Time Continuous Acuity Score Framework using Deep Learning.” Nature Scientific Reports, Vol. 9, No. 1879, 2019.
+  
+                                  In the top 5% of all research outputs scored by Altmetric. 
+                                </p>
+                            </div>
+                          </div>
+                        <div class="col">
+                            <div class="card ">
+                                <h3>2019</h3>
+                                <p>
+                                  Shickel, Benjamin, Tyler J. Loftus, Tezcan Ozrazgat-Baslanti, Ashkan Ebadi, Azra Bihorac, and Parisa Rashidi. “DeepSOFA: A Real-Time Continuous Acuity Score Framework using Deep Learning.” Nature Scientific Reports, Vol. 9, No. 1879, 2019.
+  
+                                  In the top 5% of all research outputs scored by Altmetric. 
+                                </p>
+                            </div>
+                          </div>
+                      </div> 
+                </div>
           </div>
           <div id="Publications-tab" class="tabcontent">
+              <div class="container">
+                  <div>
+                  <h1>Publications</h1>
+                  <hr>
+                  <div class="card mb-3" style="max-width: 100%;">
+                    <div class="row g-0">
+                      <div class="col-md-4">
+                        <img src="img/4.jpg" class="img-fluid rounded-start" style="width: 150px; height: 200px;"alt="...">
+                      </div>
+                      <div class="col-md-8">
+                        <div class="card-body" >
+                          <h5 class="card-title">A smartwatch-based framework for real-time and online assessment and mobility monitoring </h5>
+                          <span class="mediabutton" >Journal Article</span>
+                          <p class="card-text"><small class="text-muted">Matin Kheirkhahan, Sanjay Nair, Anis Davoudi, Parisa Rashidi, Amal A Wanigatunga, Duane B Corbett, Tonatiuh Mendoza, Todd M Manini, Sanjay Ranka
+                            Journal of biomedical informatics, 89, 29-40
+                            Publication year: 2019</small></p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  </div>
+
+                    <div class="card mb-3" style="max-width: 100%;">
+                      <div class="row g-0">
+                        <div class="col-md-4">
+                          <img src="img/4.jpg" class="img-fluid rounded-start" style="width: 150px; height: 200px;"alt="...">
+                        </div>
+                        <div class="col-md-8">
+                          <div class="card-body" >
+                            <h5 class="card-title">A smartwatch-based framework for real-time and online assessment and mobility monitoring </h5>
+                            <span class="mediabutton" >Journal Article</span>
+                            <p class="card-text"><small class="text-muted">Matin Kheirkhahan, Sanjay Nair, Anis Davoudi, Parisa Rashidi, Amal A Wanigatunga, Duane B Corbett, Tonatiuh Mendoza, Todd M Manini, Sanjay Ranka
+                              Journal of biomedical informatics, 89, 29-40
+                              Publication year: 2019</small></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div>
+                        <div class="card mb-3" style="max-width: 100%;">
+                          <div class="row g-0">
+                            <div class="col-md-4">
+                              <img src="img/4.jpg" class="img-fluid rounded-start" style="width: 150px; height: 200px;"alt="...">
+                            </div>
+                            <div class="col-md-8">
+                              <div class="card-body" >
+                                <h5 class="card-title">A smartwatch-based framework for real-time and online assessment and mobility monitoring </h5>
+                                <span class="mediabutton" >Journal Article</span>
+                                <p class="card-text"><small class="text-muted">Matin Kheirkhahan, Sanjay Nair, Anis Davoudi, Parisa Rashidi, Amal A Wanigatunga, Duane B Corbett, Tonatiuh Mendoza, Todd M Manini, Sanjay Ranka
+                                  Journal of biomedical informatics, 89, 29-40
+                                  Publication year: 2019</small></p>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        </div>                  
+              </div>
           </div>
           <div id="Teaching-tab" class="tabcontent">
           </div>
