--- a/index.html
+++ b/index.html
@@ -542,7 +542,10 @@
                 </div>
                 <div class="row">
                   <div class="column">
-                    <img src="/w3images/map.jpg" style="width:100%">
+                    <div id="map-container-google-11" class="z-depth-1-half map-container-6" style="height: 400px">
+                        <iframe src="https://maps.google.com/maps?q=new%20delphi&t=&z=13&ie=UTF8&iwloc=&output=embed"
+                          frameborder="0" style="border:0" allowfullscreen></iframe>
+                      </div>
                   </div>
                   <div class="column">
                     <form action="/action_page.php">
