--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     </footer>          
                 </div>
           
-            <div id="Research-tab" class="tabcontent ">
+            <div id="Research-tab" class="tabcontent" style="display: none;">
                 <div class="container">
                   <div class="row researchtab">
                     <div class="col ">
@@ -420,7 +420,7 @@
                   </div>
                 </div>
           </div>
-          <div id="Research-Impact-tab" class="tabcontent">
+          <div id="Research-Impact-tab" class="tabcontent" style="display: none;">
                 <div class="container">
                     <div class="impact">
                     <p>Research Impact</p>
@@ -483,7 +483,7 @@
                       </div> 
                 </div>
           </div>
-          <div id="Publications-tab" class="tabcontent">
+          <div id="Publications-tab" class="tabcontent" style="display: none;">
               <div class="container">
                   <div>
                     <div class="impact">
@@ -544,7 +544,7 @@
                         </div>                  
               </div>
           </div>
-          <div id="Teaching-tab" class="tabcontent">
+          <div id="Teaching-tab" class="tabcontent" style="display: none;">
               <div class="container">
                 <div class="impact">
                     <p>Teaching</p>
@@ -577,7 +577,7 @@
           </div>
           <!-- <div id="Blog-tab" class="tabcontent">
           </div> -->
-          <div id="CV-tab" class="tabcontent">
+          <div id="CV-tab" class="tabcontent" style="display: none;">
                 <div id="inner-nav"></div>
                 <div id="container">
                     <div id="profile">
@@ -647,7 +647,7 @@
 
 
           </div>
-          <div id="Contact-tab" class="tabcontent">
+          <div id="Contact-tab" class="tabcontent" style="display: none;">
               <div class="container">
                   <!--Section: Contact v.1-->
 <section class="section pb-5">
